Bug 96549 - EDITING --Empty calc cells show incorrect font and size after sheet is saved in xlsx format
Summary: EDITING --Empty calc cells show incorrect font and size after sheet is saved ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.6.3 release
Hardware: All All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:5.2.0 target:5.1.3
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2015-12-16 18:39 UTC by wlopcm-malibu
Modified: 2018-01-08 05:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wlopcm-malibu 2015-12-16 18:39:44 UTC
I wanted to change most of my XLS Calc sheets to XLSX.  After using 'save as' to change several of them, I found that newly entered data would not be in the same font as the existing data.  For example, in my sheets using 'Verdana' the new data would be in 'Arial'.  I selected  the entire sheet and carefully applied and saved the sheet with 'Verdana' selected.  As long as the sheet was open, each cell that I selected showed 'Verdana'.  After I closed and reopened the sheet, only the non-empty cells showed 'Verdana'.  The empty cells once-again showed 'Arial'.

Note: I then opened the sheet in Excel Online and all the cells showed as 'Verdana'!

I have found this behavior in 4.4.6.3 on both Mac OS X and Windows 7.

The behavior does not occur if I save the sheet in XLS format.
Comment 1 Buovjaga 2015-12-21 18:29:28 UTC
Reproduced.

1. Select all cells
2. Change font to Verdana
3. Save as xls and reload
4. Save as xlsx and reload

The problem is not yet in 3.5

Win 7 Pro 64-bit, Version: 5.0.4.2 (x64)
Build ID: 2b9802c1994aa0b7dc6079e128979269cf95bc78
Locale: fi-FI (fi_FI)

Version: 5.2.0.0.alpha0+
Build ID: 014633f83e44ae8ba33087b6f38e8e253e281969
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-12-15_06:21:44
Locale: fi-FI (fi_FI)

LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 2 raal 2015-12-21 20:43:09 UTC
 50edfde3aad7334191e897ed1899c2ff86da0251 is the first bad commit
commit 50edfde3aad7334191e897ed1899c2ff86da0251
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Sun Mar 15 04:20:48 2015 +0800

    source-hash-cfcfd1a868a1d089545a9da6fa7281e11f7fdcd8
    
    commit cfcfd1a868a1d089545a9da6fa7281e11f7fdcd8
    Author:     Kohei Yoshida <kohei.yoshida@collabora.com>
    AuthorDate: Thu Sep 25 19:38:51 2014 -0400
    Commit:     Kohei Yoshida <kohei.yoshida@collabora.com>
    CommitDate: Wed Oct 22 18:07:25 2014 -0400
    
        Set cell style name to the document directly, bypassing the UNO API.
    
        Change-Id: I28decfdfd8248fb9b95416b9b269a4ffabcc6370
Comment 3 Commit Notification 2016-04-09 08:55:16 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e8322dffb4dfc7015ee0842f133b79080eb2b0d8

import all formatting properties for column style, tdf#96549

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2016-04-09 09:20:33 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=95eb1c9e51e11abcc1f6d8ba7554fbc5c9590b98

add test case for tdf#96549

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2016-04-12 11:40:55 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3ced9d208d3eb8fefa4e5b3e06e2c3884eef591a&h=libreoffice-5-1

import all formatting properties for column style, tdf#96549

It will be available in 5.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.