import all formatting properties for column style, tdf#96549

Change-Id: I782f3ea7cfa9af335bd117b9f4ad6ac9c719115b
Reviewed-on: https://gerrit.libreoffice.org/23932
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit e8322dffb4dfc7015ee0842f133b79080eb2b0d8)
Reviewed-on: https://gerrit.libreoffice.org/23943
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>